# WildprintApp

./: .gitattributes  COMPARATIF_OUTILS.md  README.md  VEILLE_CICD.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  app.py  class_names.json  connection_db.py  infos_especes.csv  model.keras  requirements.txt  test_api.py  wildprint.db
front/: Dockerfile  index.html  script.js  style.css
